# ModelVerify

./: .gitignore  CLAUDE.md  DatasetAnalysis.py  DrawCompare.py  DrawCompareOnly.py  GenerateH5.py  PreprocessDBv5.py  README.md  ReadImuCamFromDB.py  TLIO2H5.py  TLIOView.py  TODO.md  TestModel.py  TorchScript2Android.py  VaildModel.py  VaildModelFromH5.py  ValidTrack.py  main.py  pyproject.toml
.agent_history/: 2026-01-24-创建agent-history-skill.md  2026-01-24-项目重构.md
base/: binary.py  datatype.py  device.py  evaluate.py  interpolate.py  model.py  rerun_ext.py  rtab.py
base/calibration/: space.py  time.py
base/draw/: Bar.py  Poses.py
converters/: GenerateFromYT.py  GenerateH5Dataset.py  GenerateValid.py  TLIO2H5Dataset.py  TorchScript2Android.py
docs/: H5Type_内存优化总结.md
src/base/: datatype.py
src/base/dataset/: H5Type.py  H5TypeOld.py
src/base/draw/: Scatter.py
tests/: TestEvaluation.py  test_aligned_data.py  test_h5_memory.py  test_h5_memory_all_sequences.py  test_h5_memory_compare.py
validators/: DatasetAnalysis.py  UncertaintyOfError.py  VaildModel.py  VaildModelFromH5.py  ValidTrack.py
visualizers/: DrawCompare.py  DrawCompareOnly.py  DrawModel.py  ImuView.py  TLIOView.py
