[project]
name = "modelverify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "rerun-sdk>=0.27.2",
    "scipy>=1.16.3",
    "scipy-stubs>=1.16.3.0",
    "torch>=2.9.1",
]
